--- a/Documentation/Documentation_source_code/Realignment documentation.html
+++ b/Documentation/Documentation_source_code/Realignment documentation.html
@@ -108,6 +108,54 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 
 
+<section id="realignent-documentation" class="level1">
+<h1>Realignent Documentation</h1>
+</section>
+<section id="overview" class="level1">
+<h1>Overview</h1>
+<p>This is the documentation of the realignment</p>
+</section>
+<section id="table-of-content" class="level1">
+<h1>Table of content</h1>
+<ul>
+<li><a href="#realignent-documentation">Realignent Documentation</a></li>
+<li><a href="#overview">Overview</a></li>
+<li><a href="#table-of-content">Table of content</a></li>
+<li><a href="#freaderget_aligned_events">fReader.<code>get_aligned_events</code></a> - <a href="#description">Description:</a> - <a href="#parameters">Parameters:</a> - <a href="#returns">Returns:</a>
+<ul>
+<li><a href="#usage-example">Usage Example:</a></li>
+<li><a href="#see-also-analysistoolsatools-documentationhtml-for-other-complimentary-functions-used">see also [AnalysisTools](ATools documentation.html) for other complimentary functions used</a></li>
+<li><a href="#selfdorealign">self.<code>doRealign</code></a>
+<ul>
+<li><a href="#description-1">Description:</a></li>
+<li><a href="#parameters-1">Parameters:</a></li>
+<li><a href="#returns-1">Returns:</a></li>
+</ul></li>
+<li><a href="#selfcheck_alignment_status">self.<code>check_alignment_status</code></a>
+<ul>
+<li><a href="#description-2">Description:</a></li>
+<li><a href="#parameters-2">Parameters:</a></li>
+</ul></li>
+<li><a href="#selfupdate_adjustment_window">self.<code>update_adjustment_window</code></a>
+<ul>
+<li><a href="#description-3">Description:</a></li>
+<li><a href="#parameters-3">Parameters:</a></li>
+</ul></li>
+<li><a href="#selfmonitor_tdc3_state">self.<code>monitor_tdc3_state</code></a>
+<ul>
+<li><a href="#description-4">Description:</a></li>
+<li><a href="#parameters-4">Parameters:</a></li>
+<li><a href="#returns-2">Returns:</a></li>
+</ul></li>
+<li><a href="#selfinsertfakeevents">self.<code>InsertFakeEvents</code></a>
+<ul>
+<li><a href="#description-5">Description:</a></li>
+<li><a href="#parameters-5">Parameters:</a></li>
+</ul></li>
+</ul></li>
+<li><a href="#code-description-get_aligned_events">Code Description: <code>get_aligned_events</code></a> - <a href="#1-initialization">1. Initialization</a> - <a href="#2-reading-and-processing-events">2. Reading and Processing Events</a> - <a href="#3-aligning-events">3. Aligning Events</a> - <a href="#4-updating-alignment-status">4. Updating Alignment Status</a> - <a href="#5-updating-adjustment-window">5. Updating Adjustment Window</a> - <a href="#6-monitoring-tdc-state">6. Monitoring TDC State</a> - <a href="#7-returning-results">7. Returning Results</a></li>
+</ul>
+</section>
 <section id="freader.get_aligned_events" class="level1">
 <h1>fReader.<code>get_aligned_events</code></h1>
 <p><strong>fReader.<code>get_aligned_events</code>(order = [(0,1), (1,2), (2,3), (3,4)], interval = 100, extract_tdc_mets = False, recordtimes = False)</strong></p>
